# wiki

./: README.md  db.sqlite3  pyproject.toml
encyclopedia/: urls.py  util.py  views.py
encyclopedia/static/encyclopedia/: styles.css
encyclopedia/templates/encyclopedia/: edit.html  index.html  layout.html  new_page.html  page.html
entries/: CSS.md  Dog.md  Dogs.md  Micol.md  Wikipedia.md  abc.md  kdjsblfj.md  mac.md  test.md  test2.md
wiki/: urls.py
