[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["MicolGiannelli19 <micol.giannelli@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
markdown2 = "^2.4.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
